--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1>Тестируем локальный репозитарий</h1>
   <p>Просто добавляем текст для нового теста.</p>
+  <p>Еще один текст для тестов.</p>
 </body>
 </html>
