Story 7: Test Tags

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>Тестируем локальный репозитарий</h1>
   <p>Просто добавляем текст для нового теста.</p>
   <p>Еще один текст для тестов.</p>
+  <p>тест для тегов.</p>
 </body>
 </html>
