--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <p>Просто добавляем текст для нового теста.</p>
   <p>Еще один текст для тестов.</p>
   <p>тест для тегов.</p>
+  <p>Изменения в ветке testing.</p>
 </body>
 </html>
