Добавлен новый нижний колонтитул [Проблема 53]

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <p>Еще один текст для тестов.</p>
   <p>тест для тегов.</p>
   <p>внесены дополнительные изменения в ветку master</p>
+  <footer><p>Добавлен нижний колонтитул</p></footer>
 </body>
 </html>
