--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <p>Еще один текст для тестов.</p>
   <p>тест для тегов.</p>
   <p>внесены дополнительные изменения в ветку master</p>
-  <footer><p>Добавлен нижний колонтитул</p></footer>
+  <footer>
+    <p>Добавлен нижний колонтитул.</p>
+  </footer>
 </body>
 </html>
